--- a/HTML/Index.css
+++ b/HTML/Index.css
@@ -6,12 +6,14 @@
 
 .Spinner {
     border: 18px solid #03c4ff;
-    border-top: 18px solid #1c9604;
+    border-top: 18px solid #f80000;
     width: 110px;
     height: 110px;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 50%;
     animation: spin 1.1s linear infinite;
-    background-color: aqua;
+    background-color: rgb(30, 100, 100);
 }
 
 @keyframes spin {
